integration GAMIFICATION & reconli